@@ -1,0 +1,9 @@
+<!-- start of $Id: send_error.php,v 1.3 2001/10/25 15:22:34 rossigee Exp $ -->
+<p>
+ <?php echo $html_send_confirmed; ?>
+</p>
+
+<p>
+ <a href="<?php echo $html_return_to_inbox; ?></a>
+
+<!-- end of $Id: send_error.php,v 1.3 2001/10/25 15:22:34 rossigee Exp $ -->
