@@ -1,5 +1,7 @@
 NOCC 0.9.5	??   ??, 2001
 
+	* Added a 'send confirmed' page so user is sure mail was accepted.
+	* Present an error when sendaction has not been set (e.g javascript disabled)
 	* Replaced error_log calls with a sessionlog member in class_smtp.php
 	* Replaced PEAR::Error with simple Exception class.
 	* Strip slashes from user while logging in (#465418)
